--- a/app/views/installations/admin_views/_index.html.erb
+++ b/app/views/installations/admin_views/_index.html.erb
@@ -13,7 +13,7 @@
           <th>Team Name</th>
           <th>Installed by</th>
           <th>Created</th>
-          <th>Last Activity</th>
+          <th>Last Activity<br>(now: <%= "#{DateTime.current.strftime('%a, %b %d %H:%M:%S %Y')}" %>)</th>
           <th>api auth_token(last 25 digits)</th>
           <th>bot auth_token(last 25 digits)</th>
         </tr>
