--- a/app/views/members/admin_views/_index_team.html.erb
+++ b/app/views/members/admin_views/_index_team.html.erb
@@ -12,7 +12,7 @@
         <th>Real Name</th>
         <th>Slack User Id</th>
         <th>Installed MiaDo on Date</th>
-        <th>Last Created Task Date</th>
+        <th>Last Created Task Date<br>(now: <%= "#{DateTime.current.strftime('%a, %b %d %H:%M:%S %Y')}" %>)</th>
       </tr>
     </thead>
     <tbody>
