--- a/app/views/teams/admin_views/_show_team.html.erb
+++ b/app/views/teams/admin_views/_show_team.html.erb
@@ -7,7 +7,7 @@
     <tr>
       <th>First<br>Added By</th>
       <th>Added On</th>
-      <th>Last Activity</th>
+      <th>Last Activity<br>(now: <%= "#{DateTime.current.strftime('%a, %b %d %H:%M:%S %Y')}" %>)</th>
       <th>Api Token(last 25 digits)</th>
       <th>Members</th>
       <th>Active<br>Channels</th>
