--- a/app/views/items/admin_views/_index_team.html.erb
+++ b/app/views/items/admin_views/_index_team.html.erb
@@ -25,13 +25,13 @@
         <table class="table table-bordered table-hover">
           <thead>
             <tr>
-              <th>Task Number</th>
-              <th>Description</th>
+              <th>Task<br>Num</th>
+              <th>Description<br>[debug trace]</th>
               <th>Assigned To</th>
               <th>Due Date</th>
-              <th>Open/Done</th>
-              <th>Created Date</th>
-              <th>Last Updated Date</th>
+              <th>Open<br>Done</th>
+              <th>Created by<br>@Date</th>
+              <th>Last Update by<br>@Date<br>(now: <%= "#{DateTime.current.strftime('%a, %b %d %H:%M:%S %Y')}" %>)</th>
             </tr>
           </thead>
           <tbody>
