--- a/app/views/users/admin_views/_index.html.erb
+++ b/app/views/users/admin_views/_index.html.erb
@@ -19,7 +19,7 @@ first_id = locals[:teams][0].id
           <th>Name</th>
           <th>Email</th>
           <th>SignUp Date</th>
-          <th>Last Activity</th>
+          <th>Last Activity<br>(now: <%= "#{DateTime.current.strftime('%a, %b %d %H:%M:%S %Y')}" %>)</th>
           <th><u><%= link_to 'Installations', installations_path %></u><%= " (#{locals[:installations].length}) by" %></th>
           <th><u><%= link_to 'Teams', teams_path %></u><%= " (#{locals[:teams].length})" %></th>
         </tr>
