[WIP]21.update-admin-console: Add taskbot err info to channels display if taskbot msg fails.

--- a/app/views/channels/admin_views/_index_shared_channel.html.erb
+++ b/app/views/channels/admin_views/_index_shared_channel.html.erb
@@ -12,8 +12,13 @@
      last_task_by_date = ''
    end
 
-   last_taskbot_msg_by = "#{channel.members_hash[channel.taskbot_msg_from_slack_id]['slack_user_name']}" unless channel.taskbot_msg_from_slack_id.nil?
-   last_taskbot_msg_by = '*none*' if channel.taskbot_msg_from_slack_id.nil?
+   if channel.taskbot_msg_from_slack_id.nil?
+     last_taskbot_msg_by = '*none*'
+   elsif channel.taskbot_msg_from_slack_id.starts_with?('*failed')
+     last_taskbot_msg_by = channel.taskbot_msg_from_slack_id
+   else
+     last_taskbot_msg_by = "#{channel.members_hash[channel.taskbot_msg_from_slack_id]['slack_user_name']}" unless channel.taskbot_msg_from_slack_id.nil?
+   end
    last_taskbot_msg_timedate = "@#{channel.taskbot_msg_date.strftime('%a, %b %d %Y %H:%M:%S')}" unless channel.taskbot_msg_date.nil?
    last_taskbot_msg_timedate = '' if channel.taskbot_msg_date.nil?
 %>
