[WIP]21.update-admin-console: Added getting started verbage, FAQ getting started, product page changes.

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -93,6 +93,19 @@
 
       <p>
         <span style="color: #0E87FC;">
+          Any tips on using MiaDo?
+        </span><br>
+        You can manage tasks in a dedicated channel or across multiple channels.
+        For very small groups, where there is not a lot of discussion, you can
+        create to “To-Do” or “Tasks” channel and manage all of your team's tasks
+        from that channel. For larger teams with active discussions around assigned
+        tasks, tasks associated with a channel can be managed in that channel.
+        Regardless of which way your team chooses to manage tasks, each team
+        member can see all of their assigned tasks with one click on their Taskbot.
+      </p>
+
+      <p>
+        <span style="color: #0E87FC;">
           What's the dog's head about?
         </span><br>
           The dog's head represents my dog Mia, who is often Missing In Action
