[WIP]22.Updates-for-Slack-app-submission: larger text size for add to slack page Getting started section.

--- a/app/views/pages/welcome_add_to_slack_new.html.erb
+++ b/app/views/pages/welcome_add_to_slack_new.html.erb
@@ -32,8 +32,8 @@
                 <%= user_name %>.
               </h3>
               <div style="display: inline-block;">
-                <h4>Get started with /do by going to your Slack team (click below)...<br></h4>
-                <ol class="text-justify" style="padding-left: 1.2em;">
+                <h4 style="font-size: 1.4em;">Get started with /do by going to your Slack team (click below)...<br></h4>
+                <ol class="text-justify" style="font-size: 1.35em; padding-left: 1.2em;">
                   <li>Enter "/do help" in any channel for the commands to add,<br>
                       modify, complete and view tasks.
                   </li>
@@ -43,7 +43,7 @@
                   </li>
                   <li>Each team member has their own Taskbot and task list.
               </ol>
-              <a href="/about#faq" style="color: black;"><u>More questions? See FAQ</u></a>
+              <a href="/about#faq" style="color: black; font-size: 1.3em;"><u>More questions? See FAQ</u></a>
             </div>
 
           <br><br>
