[WIP]22.Updates-for-Slack-app-submission: Admin console - highlight most recent task activity for each channel.

--- a/app/views/channels/admin_views/_index_team.html.erb
+++ b/app/views/channels/admin_views/_index_team.html.erb
@@ -8,7 +8,7 @@
         <th>Name</th>
         <th>Slack Chan Id</th>
         <th>Created by<br>@Date</th>
-        <th>Last Task by<br>@Date<br>(now: <%= "#{DateTime.current.strftime('%a, %b %d %H:%M:%S %Y')}" %>)</th>
+        <th>Last Task by<br>@Date(now)<br>(<%= DateTime.current.in_time_zone("Pacific Time (US & Canada)").strftime('%a %B %e, %Y %l:%M%P - PT') %>)</th>
         <th>Last Taskbot Msg by<br>@Date</th>
         <th>Tasks</th>
       </tr>
