--- a/app/views/members/admin_views/_index_team.html.erb
+++ b/app/views/members/admin_views/_index_team.html.erb
@@ -1,7 +1,7 @@
 <h3><%= "Members(#{locals[:members].length}) for Team" %>
     <u><%= link_to locals[:team].auth_json['info']['team'],
                    team_path(locals[:team]),
-                   title: "Team added #{locals[:team].created_at.strftime("%a, %d %b %Y")}" %></u>
+                   title: "Team added #{locals[:team].created_at.in_time_zone("Pacific Time (US & Canada)").strftime('%a %B %e, %Y %l:%M%P - PT')}" %></u>
     <%= "(#{locals[:team].slack_team_id})" %>
 </h3>
 <% unless locals[:members].empty? %>
@@ -12,7 +12,7 @@
         <th>Real Name</th>
         <th>Slack User Id</th>
         <th>Installed MiaDo on Date</th>
-        <th>Last Created Task Date<br>(now: <%= "#{DateTime.current.strftime('%a, %b %d %H:%M:%S %Y')}" %>)</th>
+        <th>Last Created Task Date (now)<br>(<%= DateTime.current.in_time_zone("Pacific Time (US & Canada)").strftime('%a %B %e, %Y %l:%M%P - PT') %>)</th>
       </tr>
     </thead>
     <tbody>
