--- a/app/views/installations/admin_views/_index_installation.html.erb
+++ b/app/views/installations/admin_views/_index_installation.html.erb
@@ -7,8 +7,8 @@
               installation_path(locals[:install_channel]),
               title: "" %></u>
   </td>
-  <td><%= locals[:install_channel].created_at.strftime("%a, %d %b %Y") %></td>
-  <td><%= locals[:install_channel].updated_at.strftime("%c") %></td>
+  <td><%= locals[:install_channel].created_at.in_time_zone("Pacific Time (US & Canada)").strftime('%a %B %e, %Y %l:%M%P - PT') %></td>
+  <td><%= locals[:install_channel].updated_at.in_time_zone("Pacific Time (US & Canada)").strftime('%a %B %e, %Y %l:%M%P - PT') %></td>
   <td><%= locals[:install_channel].slack_user_api_token.length > 25 ? locals[:install_channel].slack_user_api_token[-25, 25] : locals[:install_channel].slack_user_api_token %></td>
   <td><%= locals[:install_channel].bot_api_token.length > 25 ? locals[:install_channel].bot_api_token[-25, 25] : locals[:install_channel].bot_api_token %></td>
 </tr>
