--- a/app/views/items/admin_views/_index_team.html.erb
+++ b/app/views/items/admin_views/_index_team.html.erb
@@ -1,13 +1,14 @@
 <% if locals[:items].length == 0 %>
   <h3><u><%= link_to locals[:auth_info]['team'],
                   team_path(locals[:install_channel]),
-                  title: "Created on #{locals[:install_channel].created_at.strftime('%c')}" %>
+                  title: "Created on #{locals[:install_channel].created_at.in_time_zone("Pacific Time (US & Canada)").strftime('%a %B %e, %Y %l:%M%P - PT')}" %>
       </u> - no active channels.
   </h3>
 <% else %>
 <%
   current_channel_id = ''
   task_num = 0
+  most_recent_task = nil
   locals[:items].each_with_index do |item, index|
     unless current_channel_id == item.channel_id
       unless current_channel_id == '' %>
@@ -17,10 +18,15 @@
       <% end %>
       <% current_channel_id = item.channel_id
          task_num = 1
+         most_recent_task = locals[:items][index]
+         locals[:items][index..-1].each do |item_for_this_channel|
+           most_recent_task = item_for_this_channel if item_for_this_channel.updated_at > most_recent_task.updated_at
+           break unless item_for_this_channel.channel_id == current_channel_id
+         end
       %>
       <h3><u><%= link_to locals[:auth_info]['team'],
                       team_path(locals[:install_channel]),
-                      title: "Created on #{locals[:install_channel].created_at.strftime('%c')}" %></u>
+                      title: "Created on #{locals[:install_channel].created_at.in_time_zone("Pacific Time (US & Canada)").strftime('%a %B %e, %Y %l:%M%P - PT')}" %></u>
         <%= "Channel: ##{item.channel_name}(#{current_channel_id})" %></h3>
         <table class="table table-bordered table-hover">
           <thead>
@@ -31,7 +37,10 @@
               <th>Due Date</th>
               <th>Open<br>Done</th>
               <th>Created by<br>@Date</th>
-              <th>Last Update by<br>@Date<br>(now: <%= "#{DateTime.current.strftime('%a, %b %d %H:%M:%S %Y')}" %>)</th>
+              <th>Last Update by<br>@Date (now)<br>
+                (<%= DateTime.current.in_time_zone("Pacific Time (US & Canada)").strftime('%a %B %e, %Y %l:%M%P - PT') %>)
+                <br><span class="alert-info">[Most Recent]</span>
+              </th>
             </tr>
           </thead>
           <tbody>
@@ -39,11 +48,13 @@
     <%= render partial: 'items/admin_views/index_item',
                locals: { locals: { task_num: task_num,
                                    item: item,
-                                   members_hash: locals[:install_channel].members_hash
+                                   members_hash: locals[:install_channel].members_hash,
+                                   is_last_updated_item: item.updated_at == most_recent_task.updated_at
                                  }
                        }
     %>
-    <% task_num += 1 %>
+    <% task_num += 1
+    %>
   <% end %>
   <% unless current_channel_id == '' %>
            </tbody>
