--- a/app/views/teams/admin_views/_index_team_line1.html.erb
+++ b/app/views/teams/admin_views/_index_team_line1.html.erb
@@ -1,7 +1,7 @@
 <tr>
   <td><u><%= link_to locals[:auth_info]['user'], '' %></u></td>
-  <td><%= locals[:team].created_at.strftime('%a, %d %b %Y') %></td>
-  <td><%= locals[:last_activity].strftime('%c') %></td>
+  <td><%= locals[:team].created_at.in_time_zone("Pacific Time (US & Canada)").strftime('%a %B %e, %Y %l:%M%P - PT') %></td>
+  <td><%= locals[:last_activity].in_time_zone("Pacific Time (US & Canada)").strftime('%a %B %e, %Y %l:%M%P - PT') %></td>
   <td><%= locals[:team].slack_user_api_token.length > 25 ? locals[:team].slack_user_api_token[-25, 25] : locals[:team].slack_user_api_token %></td>
   <td><%= link_to " (#{locals[:members].length})", team_members_path(locals[:team]) %></td>
   <td><%= link_to " (#{locals[:channels].length})", team_channels_path(locals[:team]) %></td>
