--- a/app/views/installations/admin_views/_index.html.erb
+++ b/app/views/installations/admin_views/_index.html.erb
@@ -11,11 +11,9 @@
       <thead>
         <tr>
           <th>Team Name</th>
-          <th>Installed by</th>
-          <th>Created</th>
-          <th>Last Activity (now)<br>(<%= DateTime.current.in_time_zone("Pacific Time (US & Canada)").strftime('%a %B %e, %Y %l:%M%P - PT') %>)</th>
-          <th>api auth_token(last 25 digits)</th>
-          <th>bot auth_token(last 25 digits)</th>
+          <th>Installed by<br>@Install Date<br>*Last Activity Time<br>[Server Time Now]</th>
+          <th>api auth_token</th>
+          <th>bot auth_token</th>
         </tr>
       </thead>
       <tbody>
