[WIP]22.Updates-for-Slack-app-submission: Fix admin console blowoff if nil db fields.

--- a/app/views/channels/admin_views/_index_channel_recent_activity.html.erb
+++ b/app/views/channels/admin_views/_index_channel_recent_activity.html.erb
@@ -1,5 +1,7 @@
 <% channel = locals[:channel]
-   if channel.last_activity_type.starts_with?('slash_command')
+   if channel.last_activity_type.nil?
+     description = '*unknown*'
+   elsif channel.last_activity_type.starts_with?('slash_command')
      if channel.last_activity_type == 'slash_command - help'
        description = channel.last_activity_type
      elsif channel.last_activity_type == 'slash_command - list'
