--- a/app/views/channels/admin_views/_index_shared_channel.html.erb
+++ b/app/views/channels/admin_views/_index_shared_channel.html.erb
@@ -7,6 +7,6 @@
   <td><%= channel.created_at.in_time_zone("Pacific Time (US & Canada)").strftime('%a %B %e, %Y %l:%M%P - PT') %></td>
   <td><%= channel.last_activity_type %><br><%= channel.last_activity_date.nil? ? '' : "@#{channel.last_activity_date.in_time_zone('Pacific Time (US & Canada)').strftime('%a %B %e, %Y %l:%M%P - PT')}" %></td>
   <td><%= channel.taskbot_msg_to_slack_id.nil? ? '' : channel.members_hash[channel.taskbot_msg_to_slack_id]['slack_user_name'] %>
-    <br><%= channel.taskbot_msg_date.nil? ? '' : channel.last_activity_date.in_time_zone("Pacific Time (US & Canada)").strftime('%a %B %e, %Y %l:%M%P - PT') %>
+    <br><%= channel.taskbot_msg_date.nil? ? '' : channel.taskbot_msg_date.in_time_zone("Pacific Time (US & Canada)").strftime('%a %B %e, %Y %l:%M%P - PT') %>
   <td><%= locals[:items].length %></td>
 </tr>
