[WIP]22.Updates-for-Slack-app-submission: admin console - sometimes most recent task was not highlighted.

--- a/app/views/channels/admin_views/_index_channel_recent_activity.html.erb
+++ b/app/views/channels/admin_views/_index_channel_recent_activity.html.erb
@@ -1,5 +1,7 @@
 <% channel = locals[:channel]
-   if channel.last_activity_type.nil?
+   if locals[:items].empty?
+     description = '*no activity*'
+   elsif channel.last_activity_type.nil?
      description = '*unknown*'
    elsif channel.last_activity_type.starts_with?('slash_command')
      if channel.last_activity_type == 'slash_command - help'
@@ -17,6 +19,6 @@
 <tr>
   <td><%= "#{channel.slack_channel_name} - #{channel.members_hash[ channel.slack_user_id ]['slack_user_name']}" %></td>
   <td><%= channel.last_activity_type %>
-    <br>@<%= channel.last_activity_date.nil? ? '' : channel.last_activity_date.in_time_zone("Pacific Time (US & Canada)").strftime('%a %B %e, %Y %l:%M%P - PT') %></td>
+    <br>@<%= channel.last_activity_date.nil? ? 'none' : channel.last_activity_date.in_time_zone("Pacific Time (US & Canada)").strftime('%a %B %e, %Y %l:%M%P - PT') %></td>
   <td><%= description %></td>
 </tr>
