--- a/app/views/installations/admin_views/_index.html.erb
+++ b/app/views/installations/admin_views/_index.html.erb
@@ -10,7 +10,7 @@
     <table class="table table-bordered table-hover">
       <thead>
         <tr>
-          <th>Team Name</th>
+          <th>Team Name<br>(db recId)</th>
           <th>Installed by<br>@Install Date<br>*Last Activity Time<br>[Server Time Now]</th>
           <th>api auth_token</th>
           <th>bot auth_token</th>
