[WIP]23.Persist-bot-msg-ids: Update admin console for new db fields.

--- a/app/views/channels/admin_views/_index.html.erb
+++ b/app/views/channels/admin_views/_index.html.erb
@@ -9,10 +9,10 @@
     <h2><%= "#{locals[:team_channels].length} Active #{'Channel'.pluralize(locals[:team_channels].length)} " %>
         <%= "in #{locals[:teams].length} #{'Team'.pluralize(locals[:teams].length)}"  %></h2>
     <hr>
-    <% locals[:teams].each do |team| %>
+    <% locals[:teams].each do |installation| %>
       <%= render partial: 'channels/admin_views/index_team',
-                 locals: { locals: { team: team,
-                                     shared_channels: Channel.shared_team_channels(slack_team_id: team.slack_team_id),
+                 locals: { locals: { team: installation,
+                                     shared_channels: Channel.shared_team_channels(slack_team_id: installation.slack_team_id),
                                    }
                          }
       %>
