--- a/app/views/channels/admin_views/_index_shared_channel.html.erb
+++ b/app/views/channels/admin_views/_index_shared_channel.html.erb
@@ -1,12 +1,19 @@
 <% channel = locals[:channel]
+   member = locals[:member]
+   taskbot_msg_to_name = '' if channel.taskbot_msg_to_slack_id.nil?
+   taskbot_msg_to_name =
+     Member.find_from(source: :slack,
+                      slack_user_id: channel.taskbot_msg_to_slack_id,
+                      slack_team_id: channel.slack_team_id
+                     ).slack_user_name unless channel.taskbot_msg_to_slack_id.nil?
 %>
 
 <tr>
-  <td><%= "#{channel.slack_channel_name} - #{channel.members_hash[ channel.slack_user_id ]['slack_user_name']}" %></td>
+  <td><%= "#{channel.slack_channel_name} - #{member.slack_user_name}" %></td>
   <td><%= channel.slack_channel_id %></td>
   <td><%= channel.created_at.in_time_zone("Pacific Time (US & Canada)").strftime('%a %B %e, %Y %l:%M%P - PT') %></td>
   <td><%= channel.last_activity_type %><br><%= channel.last_activity_date.nil? ? '' : "@#{channel.last_activity_date.in_time_zone('Pacific Time (US & Canada)').strftime('%a %B %e, %Y %l:%M%P - PT')}" %></td>
-  <td><%= channel.taskbot_msg_to_slack_id.nil? ? '' : channel.members_hash[channel.taskbot_msg_to_slack_id]['slack_user_name'] %>
+  <td><%= taskbot_msg_to_name %>
     <br><%= channel.taskbot_msg_date.nil? ? '' : channel.taskbot_msg_date.in_time_zone("Pacific Time (US & Canada)").strftime('%a %B %e, %Y %l:%M%P - PT') %>
   <td><%= locals[:items].length %></td>
 </tr>
