--- a/app/views/channels/admin_views/_index_shared_channel.html.erb
+++ b/app/views/channels/admin_views/_index_shared_channel.html.erb
@@ -1,11 +1,16 @@
 <% channel = locals[:channel]
    member = locals[:member]
-   taskbot_msg_to_name = '' if channel.taskbot_msg_to_slack_id.nil?
-   taskbot_msg_to_name =
-     Member.find_from(source: :slack,
-                      slack_user_id: channel.taskbot_msg_to_slack_id,
-                      slack_team_id: channel.slack_team_id
-                     ).slack_user_name unless channel.taskbot_msg_to_slack_id.nil?
+   if channel.taskbot_msg_to_slack_id.nil?
+     taskbot_msg_to_name = ''
+   elsif channel.taskbot_msg_to_slack_id.starts_with?('*failed')
+     taskbot_msg_to_name = channel.taskbot_msg_to_slack_id
+   else
+     msg_to_member = Member.find_from(source: :slack,
+                               slack_user_id: channel.taskbot_msg_to_slack_id,
+                               slack_team_id: channel.slack_team_id)
+     taskbot_msg_to_name = '*member?*' if msg_to_member.nil?
+     taskbot_msg_to_name = msg_to_member.slack_user_name unless msg_to_member.nil?
+   end
 %>
 
 <tr>
