--- a/app/views/items/admin_views/_index_team.html.erb
+++ b/app/views/items/admin_views/_index_team.html.erb
@@ -31,7 +31,7 @@
         <table class="table table-bordered table-hover">
           <thead>
             <tr>
-              <th>Task<br>Num</th>
+              <th>Task<br>Num<br>(Id)</th>
               <th>Description<br>[debug trace]</th>
               <th>Assigned To</th>
               <th>Due Date</th>
