--- a/app/views/channels/admin_views/_index_shared_channel.html.erb
+++ b/app/views/channels/admin_views/_index_shared_channel.html.erb
@@ -14,7 +14,7 @@
 %>
 
 <tr>
-  <td><%= "#{channel.slack_channel_name} - #{member.slack_user_name}" %></td>
+  <td><%= "#{channel.slack_channel_name} - #{member.slack_user_name}" %><br>(<%= channel.id %>)</td>
   <td><%= channel.slack_channel_id %></td>
   <td><%= channel.created_at.in_time_zone("Pacific Time (US & Canada)").strftime('%a %B %e, %Y %l:%M%P - PT') %></td>
   <td><%= channel.last_activity_type %><br><%= channel.last_activity_date.nil? ? '' : "@#{channel.last_activity_date.in_time_zone('Pacific Time (US & Canada)').strftime('%a %B %e, %Y %l:%M%P - PT')}" %></td>
